--- a/css/output.css
+++ b/css/output.css
@@ -447,25 +447,32 @@ video {
 @font-face {
   font-family: "Kumbh Sans";
 
-  src: url(../assets/fonts/static/KumbhSans-Regular.ttf) format("truetype");
+  src: url(../assets/fonts/KumbhSans-VariableFont_YOPQ\wght.ttf)
+      format("truetype");
 
   font-display: swap;
 
   font-style: normal;
-
-  font-weight: 400;
 }
 
-@font-face {
-  font-family: "Kumbh Sans";
+body {
+  background-image: url(../assets/images/bg-pattern-top.svg),
+      url(../assets/images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat no-repeat;
+  background-position: -730px -880px, 600px 300px;
+  background-size: cover, cover;
+}
 
-  src: url(../assets/fonts/static/KumbhSans-Bold.ttf) format("truetype");
+@media only screen and (max-width: 1024px) {
+  body {
+    background-position: -600px -500px, 600px 300px;
+  }
+}
 
-  font-display: swap;
-
-  font-style: normal;
-
-  font-weight: 700;
+@media only screen and (max-width: 640px) {
+  body {
+    background-position: -450px -400px, 150px 300px;
+  }
 }
 
 main {
@@ -608,14 +615,6 @@ main {
   }
 }
 
-.fixed {
-  position: fixed;
-}
-
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
@@ -686,12 +685,8 @@ main {
   justify-content: center;
 }
 
-.justify-stretch {
-  justify-content: stretch;
-}
-
-.gap-10 {
-  gap: 2.5rem;
+.gap-12 {
+  gap: 3rem;
 }
 
 .gap-4 {
@@ -753,10 +748,6 @@ main {
   padding-bottom: 1.5rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -778,7 +769,7 @@ main {
 }
 
 .text-xs {
-  font-size: clamp(0.75rem, 1vw, 2rem);
+  font-size: clamp(0.75rem, .5vw, 2rem);
 }
 
 .font-bold {
