--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 @layer base {
   @font-face {
     font-family: "Kumbh Sans";
-    src: url(../assets/fonts/KumbhSans-VariableFont_YOPQ\wght.ttf)
+    src: url(../assets/fonts/KumbhSans-VariableFont_YOPQ\,wght.ttf)
       format("truetype");
     font-display: swap;
     font-style: normal;
